tests/run-pass/semck/use-from-parent-scope.rs
fn main() {
    let a: int = 0;

    if true {
        a += 1;
    }
}